@@ -3,7 +3,7 @@
         RS=Mark.
 
         Due to a difference between the collision bounds for paths
-        in different versions of CG these tests need modiifed to 
+        in different versions of CG these tests need modified to 
         pass on tiger and leopard.
 
         * fast/canvas/pointInPath-expected.txt:
